--- a/app/src/main/res/layout/activity_my_stock_detail.xml
+++ b/app/src/main/res/layout/activity_my_stock_detail.xml
@@ -1,7 +1,6 @@
-<fragment xmlns:android="http://schemas.android.com/apk/res/android"
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/fragment"
-    android:name="com.sam_chordas.android.stockhawk.ui.MyStockDetailActivityFragment"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    tools:layout="@layout/fragment_my_stock_detail" />
+    android:layout_height="match_parent" />
+
