--- a/app/src/main/res/layout/fragment_my_stock_detail.xml
+++ b/app/src/main/res/layout/fragment_my_stock_detail.xml
@@ -6,7 +6,7 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="com.sam_chordas.android.stockhawk.ui.MyStockDetailActivityFragment">
+    tools:context=".ui.MyStockDetailFragment">
 
     <com.db.chart.view.LineChartView
         xmlns:chart="http://schemas.android.com/apk/res-auto"
