--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -7,6 +7,12 @@
          https://developer.android.com/design/patterns/navigation-drawer.html -->
     <dimen name="navigation_drawer_width">240dp</dimen>
 
-    <dimen name="widget_default_height">110dp</dimen>
-    <dimen name="widget_default_width">110dp</dimen>
+    <dimen name="widget_default_height">220dp</dimen>
+    <dimen name="widget_default_width">220dp</dimen>
+
+    <!--
+Refer to App Widget Documentation for margin information
+http://developer.android.com/guide/topics/appwidgets/index.html#CreatingLayout
+    -->
+    <!--<dimen name="widget_margin">8dp</dimen>-->
 </resources>
