--- a/app/src/main/res/layout/activity_line_graph.xml
+++ b/app/src/main/res/layout/activity_line_graph.xml
@@ -4,6 +4,7 @@
     android:layout_height="match_parent">
 
     <com.db.chart.view.LineChartView
+        android:contentDescription="@string/desc_chart"
         xmlns:chart="http://schemas.android.com/apk/res-auto"
         android:id="@+id/linechart"
         android:layout_width="match_parent"
