--- a/app/src/main/res/layout/fragment_my_stock_detail.xml
+++ b/app/src/main/res/layout/fragment_my_stock_detail.xml
@@ -9,6 +9,7 @@
     tools:context=".ui.MyStockDetailFragment">
 
     <com.db.chart.view.LineChartView
+        android:contentDescription="@string/desc_chart"
         xmlns:chart="http://schemas.android.com/apk/res-auto"
         android:id="@+id/linechart"
         android:layout_width="match_parent"
